[gd_scene load_steps=56 format=2]

[ext_resource path="res://Scenes/Minigames/Tshirt/TshirtLevel1.gd" type="Script" id=1]
[ext_resource path="res://Art/Minigame art/Tshirt/donation_bin.png" type="Texture" id=2]
[ext_resource path="res://Art/Minigame art/Tshirt/keepshirt.png" type="Texture" id=3]
[ext_resource path="res://Art/Minigame art/Tshirt/garbagecan.png" type="Texture" id=4]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_15.png" type="Texture" id=5]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_10.png" type="Texture" id=6]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_1.png" type="Texture" id=7]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_11.png" type="Texture" id=8]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_6.png" type="Texture" id=9]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_3.png" type="Texture" id=10]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_7.png" type="Texture" id=11]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_5.png" type="Texture" id=12]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_2.png" type="Texture" id=13]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_14.png" type="Texture" id=14]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_8.png" type="Texture" id=15]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_9.png" type="Texture" id=16]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_2.png" type="Texture" id=17]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_4.png" type="Texture" id=18]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_4.png" type="Texture" id=19]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_1.png" type="Texture" id=20]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_7.png" type="Texture" id=21]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_10.png" type="Texture" id=22]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_8.png" type="Texture" id=23]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_5.png" type="Texture" id=24]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_6.png" type="Texture" id=25]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_3.png" type="Texture" id=26]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_13.png" type="Texture" id=27]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation2/cat_hiss_9.png" type="Texture" id=28]
[ext_resource path="res://Art/Minigame art/Tshirt/dirty_t-shirt.png" type="Texture" id=29]
[ext_resource path="res://Art/Minigame art/Tshirt/small_sweater.png" type="Texture" id=30]
[ext_resource path="res://Art/Minigame art/Tshirt/dirty_jeans.png" type="Texture" id=31]
[ext_resource path="res://Art/Minigame art/Tshirt/old_underware.png" type="Texture" id=32]
[ext_resource path="res://Art/Minigame art/Tshirt/red_ripped_t-shirt.png" type="Texture" id=33]
[ext_resource path="res://Art/Minigame art/Tshirt/cool_shorts.png" type="Texture" id=34]
[ext_resource path="res://Art/Minigame art/Tshirt/pink_ripped_sweater.png" type="Texture" id=35]
[ext_resource path="res://Art/Minigame art/Tshirt/sweater.png" type="Texture" id=36]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=37]
[ext_resource path="res://Art/Pixeltype.ttf" type="DynamicFontData" id=38]
[ext_resource path="res://Scenes/Minigames/Tshirt/AnimationPlayer.gd" type="Script" id=39]
[ext_resource path="res://Art/Minigame art/Tshirt/scissors.png" type="Texture" id=40]
[ext_resource path="res://Art/Minigame art/Tshirt/poof.png" type="Texture" id=41]
[ext_resource path="res://Scenes/ScoreMessage.tscn" type="PackedScene" id=42]
[ext_resource path="res://Art/Minigame art/Tshirt/background_wardrobe_game_.png" type="Texture" id=43]
[ext_resource path="res://Art/Minigame art/Tshirt/wardrobe.png" type="Texture" id=44]
[ext_resource path="res://Assets/Sounds/wrong_answer.mp3" type="AudioStream" id=45]
[ext_resource path="res://Assets/Sounds/correct_answer.mp3" type="AudioStream" id=46]

[sub_resource type="DynamicFont" id=9]
size = 240
extra_spacing_char = 2
font_data = ExtResource( 38 )

[sub_resource type="DynamicFont" id=1]
size = 300
extra_spacing_char = 2
font_data = ExtResource( 38 )

[sub_resource type="DynamicFont" id=2]
size = 180
extra_spacing_char = 2
font_data = ExtResource( 38 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 13 ), ExtResource( 26 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 11 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 8 ), ExtResource( 27 ), ExtResource( 14 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 28 ), ExtResource( 6 ) ],
"loop": true,
"name": "hiss",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shirt/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Scissors:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 291, 644 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Scissors:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Poof:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Poof:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BrokenShorts:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GoodShorts:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "cut_pants"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Scissors:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 291, 644 ), Vector2( 228, 563 ), Vector2( 442, 738 ), Vector2( 680, 824 ), Vector2( 1082, 791 ), Vector2( 291, 644 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Scissors:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 14.5, -21.9, -0.1, -14.6, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Poof:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Poof:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BrokenShorts:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GoodShorts:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "donate"

[sub_resource type="Animation" id=6]
resource_name = "keep"
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 1000 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "throwout"
tracks/0/type = "value"
tracks/0/path = NodePath("Shirt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 200, 0 ), Vector2( -1400, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shirt/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="TshirtLevel1" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.935547, 0.526367 )
texture = ExtResource( 43 )

[node name="Wardrobe" type="Sprite" parent="."]
position = Vector2( 1321, 498 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 44 )

[node name="throw_away_button" type="TextureButton" parent="."]
margin_left = 83.0
margin_top = 848.0
margin_right = 557.0
margin_bottom = 1436.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="throw_away_button"]
margin_left = -106.667
margin_top = 586.667
margin_right = 659.333
margin_bottom = 736.667
custom_fonts/font = SubResource( 9 )
text = "Weggooien"

[node name="donation_button" type="TextureButton" parent="."]
margin_left = 1641.0
margin_top = 846.0
margin_right = 2441.0
margin_bottom = 1646.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="donation_button"]
margin_left = -32.0
margin_top = 748.0
margin_right = 886.0
margin_bottom = 937.0
custom_fonts/font = SubResource( 1 )
text = "Weggeven"

[node name="keep_button" type="TextureButton" parent="."]
margin_left = 356.0
margin_top = 737.0
margin_right = 968.0
margin_bottom = 1349.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="keep_button"]
margin_left = 66.0
margin_top = 582.0
margin_right = 484.0
margin_bottom = 695.0
custom_fonts/font = SubResource( 2 )
text = "Houden"

[node name="Cat" type="AnimatedSprite" parent="."]
position = Vector2( 278, 304 )
scale = Vector2( 0.283887, 0.298535 )
frames = SubResource( 3 )
frame = 1
speed_scale = 0.5
playing = true

[node name="SpeechBubble" parent="." instance=ExtResource( 37 )]
position = Vector2( -3, 4 )
scale = Vector2( 0.75, 0.75 )

[node name="GoodSweater" type="Sprite" parent="."]
position = Vector2( -472, 488 )
texture = ExtResource( 36 )

[node name="DirtyShirt" type="Sprite" parent="."]
position = Vector2( -513, 550 )
texture = ExtResource( 29 )

[node name="OldUnderwear" type="Sprite" parent="."]
position = Vector2( -539, 561 )
texture = ExtResource( 32 )

[node name="RippedSweater" type="Sprite" parent="."]
position = Vector2( -737, 593 )
texture = ExtResource( 35 )

[node name="RippedShirt" type="Sprite" parent="."]
position = Vector2( -742, 627 )
texture = ExtResource( 33 )

[node name="SmallSweater" type="Sprite" parent="."]
position = Vector2( -523, 705 )
texture = ExtResource( 30 )

[node name="BrokenShorts" type="Sprite" parent="."]
position = Vector2( 1000, 500 )
texture = ExtResource( 31 )

[node name="GoodShorts" type="Sprite" parent="."]
visible = false
position = Vector2( 998, 507 )
texture = ExtResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/cut_pants = SubResource( 8 )
anims/donate = SubResource( 5 )
anims/keep = SubResource( 6 )
anims/throwout = SubResource( 7 )
script = ExtResource( 39 )

[node name="Scissors" type="Sprite" parent="."]
position = Vector2( 291, 644 )
texture = ExtResource( 40 )

[node name="ScissorsButton" type="TextureButton" parent="Scissors"]
margin_left = -140.0
margin_top = -84.0
margin_right = 148.0
margin_bottom = 102.0

[node name="Poof" type="Sprite" parent="."]
visible = false
position = Vector2( 922, 689 )
scale = Vector2( 2, 2 )
texture = ExtResource( 41 )

[node name="ScoreMessage" parent="." instance=ExtResource( 42 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Correctsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 46 )

[node name="Wrongsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 45 )

[connection signal="pressed" from="throw_away_button" to="." method="_on_throw_away_button_pressed"]
[connection signal="pressed" from="donation_button" to="." method="_on_donation_button_pressed"]
[connection signal="pressed" from="keep_button" to="." method="_on_keep_button_pressed"]
[connection signal="pressed" from="Scissors/ScissorsButton" to="." method="_on_ScissorsButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
